# tnqvm

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  setup.py
.github/workflows/: build.yml
ExaTensor/: README.md  tensor_expression.cpp
ExaTensor/exatensor/: type_deduct.hpp
ITensor/: options.mk.sample
ITensor/itensor/: itensor_interface.ih
cmake/: tnqvm-config.cmake.in
cmake/spack/: package.py
examples/: CMakeLists.txt  h2_exp_vals_scaffold_tnqvm.cpp  teleport_scaffold_tnqvm.cpp
examples/100qbits/: 100qbits.cpp  CMakeLists.txt  generate random circuit.ipynb  tnqvm_rand_profiling.ipynb
examples/VQE/: CMakeLists.txt  h2_exp_vals_multi_exec.cpp  h2_exp_vals_scaffold_tnqvm.cpp  plot energy vs theta.ipynb
examples/base_api/: CMakeLists.txt  bitstring_amplitude.cpp  noisy_sim.cpp  qasm_sim.cpp
examples/exatn_gen/: ASP_8q_5001.qasm  CMakeLists.txt  exatn_reconstruct_visitor.cpp  main_asp.cpp  main_qaoa.cpp  make.sh  qaoa_14q.qasm
examples/mpi/: CMakeLists.txt  deutsch_jozsa.cpp  qaoa_mpi.cpp  testMpi.cpp
examples/multiple_visitors/: CMakeLists.txt  multiple_visitors.cpp
examples/openmp_kernels/: CMakeLists.txt  kernels_src.hpp  openmp_kernels.cpp  tmp.hpp
examples/supremacy/: CMakeLists.txt  Supremacy with TNQVM.ipynb  (+1 more)
examples/sycamore/: CMakeLists.txt  parse_qflex.py  sycamore_amplitude.py  sycamore_circ_amplitude.cpp  sycamore_circ_amplitude_compare.cpp  sycamore_circ_amplitude_conjugate_layer.cpp  sycamore_circ_approx.cpp  sycamore_circ_contract_flops.cpp  sycamore_circ_mps.cpp  sycamore_circ_slice_samples.cpp  sycamore_circ_validate_contraction.cpp
examples/sycamore/gtc/: sycamoreCirc_14.cseq.exatn
examples/sycamore/resources/: sycamore_53_10_0.xasm  sycamore_53_10_0_Conjugate.xasm  sycamore_53_11_0.txt  sycamore_53_11_0.xasm  sycamore_53_11_0_Conjugate.xasm  sycamore_53_12_0.xasm  sycamore_53_12_0_Conjugate.xasm  sycamore_53_13_0.txt  sycamore_53_13_0.xasm  sycamore_53_13_0_Conjugate.xasm  sycamore_53_14_0.xasm  sycamore_53_14_0_Conjugate.xasm  sycamore_53_15_0.txt  sycamore_53_15_0.xasm  sycamore_53_15_0_Conjugate.xasm  sycamore_53_16_0.xasm  sycamore_53_16_0_Conjugate.xasm  sycamore_53_18_0.xasm  sycamore_53_18_0_Conjugate.xasm  sycamore_53_1_0.xasm  sycamore_53_20_0.xasm  sycamore_53_20_0_Conjugate.xasm  sycamore_53_2_0.xasm  sycamore_53_4_0.xasm  sycamore_53_4_0_Conjugate.xasm  sycamore_53_5_0.xasm  sycamore_53_5_0_Conjugate.xasm  sycamore_53_6_0.xasm  sycamore_53_6_0_Conjugate.xasm  sycamore_53_7_0.txt  sycamore_53_7_0.xasm  sycamore_53_7_0_Conjugate.xasm  sycamore_53_8_0.xasm  sycamore_53_8_0_Conjugate.xasm  sycamore_53_9_0.txt  sycamore_53_9_0.xasm  sycamore_53_9_0_Conjugate.xasm
python/: CMakeLists.txt  tnqvm-py.cpp
python/examples/: exp-val-calc.py
scripts/: check_format_cpp.sh
tensor/: CMakeLists.txt  TalshTensorProvider.hpp
tensor/tests/: TalshTensorTest.cpp
tnqvm/: CMakeLists.txt  ExaTensorAdapter.cpp  ExaTensorAdapter.hpp  ExaTensorMPSVisitor.cpp  ExaTensorMPSVisitor.hpp  ExaTensorVisitor.hpp  GateFactory.cpp  GateFactory.hpp  ITensorMPSVisitor.cpp  ITensorMPSVisitor.hpp  ITensorVisitor.hpp  TNQVM.cpp  TNQVM.hpp  TNQVMActivator.cpp  TNQVMBuffer.hpp  TNQVMVisitor.hpp  TensorVisitor.hpp  it.cpp  manifest.json  tensor_expression.hpp
tnqvm/base/: CMakeLists.txt  Gates.hpp
tnqvm/itensor/: CMakeLists.txt  ITensorActivator.cpp  manifest.json
tnqvm/itensor/mps/: ITensorMPSVisitor.cpp  ITensorMPSVisitor.hpp  ProbNode.hpp
tnqvm/itensor/mps/tests/: ITensorMPSVisitorTester.cpp
tnqvm/tests/: CMakeLists.txt  ExaTensorMPSVisitorTester.cpp  ExatnExpValByConjTester.cpp  ExatnExpValSumReduceTester.cpp  ExatnMPSVisitorTester.cpp  ExatnVisitorTester.cpp  TNQVMTester.cpp  VQEModeTester.cpp
tnqvm/utils/: GateMatrixAlgebra.hpp  RandomEngine.hpp
tnqvm/visitors/: CMakeLists.txt  TNQVMVisitor.hpp
tnqvm/visitors/exatensor/: CMakeLists.txt  ExaTensorActivator.cpp  ExaTensorMPSVisitor.cpp  ExaTensorMPSVisitor.hpp  GateFactory.cpp  GateFactory.hpp  manifest.json
tnqvm/visitors/exatensor/tests/: CMakeLists.txt  ExaTensorMPSVisitorTester.cpp
tnqvm/visitors/exatn/: CMakeLists.txt  ExatnActivator.cpp  ExatnMPSVisitor.cpp  ExatnMPSVisitor.hpp  ExatnTearDown.hpp  ExatnVisitor.cpp  ExatnVisitor.hpp  GateFactory.cpp  GateFactory.hpp  manifest.json
tnqvm/visitors/exatn-dm/: CMakeLists.txt  ExaTnDmVisitor.cpp  ExaTnDmVisitor.hpp  manifest.json
tnqvm/visitors/exatn-dm/tests/: CMakeLists.txt  JsonNoiseModelTester.cpp
tnqvm/visitors/exatn-gen/: CMakeLists.txt  ExatnGenActivator.cpp  ExatnGenVisitor.cpp  ExatnGenVisitor.hpp  manifest.json
tnqvm/visitors/exatn-gen/tests/: CMakeLists.txt  ExaTnGenTester.cpp
tnqvm/visitors/exatn-mpo/: CMakeLists.txt  ExaTnMpoActivator.cpp  ExaTnMpoVisitor.cpp  ExaTnMpoVisitor.hpp  ExaTnPmpsActivator.cpp  ExaTnPmpsVisitor.cpp  ExaTnPmpsVisitor.hpp  Kraus.hpp  NoiseModel.cpp  NoiseModel.hpp  manifest.json
tnqvm/visitors/exatn-mpo/tests/: CMakeLists.txt  ExaTnPmpsTester.cpp  JsonNoiseModelTester.cpp  NoiseModelTester.cpp  VqeTester.cpp
tnqvm/visitors/exatn-mpo/tests/resources/: ibmqx2.json
tnqvm/visitors/exatn-mps/: CMakeLists.txt  ExaTnMpsActivator.cpp  ExaTnMpsVisitor.cpp  ExaTnMpsVisitor.hpp  ExatnUtils.cpp  ExatnUtils.hpp  GateTensorAggregator.hpp  NearestNeighborTransform.hpp  RandomCircuitGen.hpp  manifest.json
tnqvm/visitors/exatn-mps/tests/: BigCircuitTester.cpp  CMakeLists.txt  GateAggregatorTester.cpp  MpsGateTester.cpp  MpsMeasurementTester.cpp  MpsOverMpiTester.cpp  NearestNeighborTransformTester.cpp  NumericalTester.cpp  NumericalTesterCheckNorm.cpp  SvdTruncateTester.cpp
tnqvm/visitors/exatn/tests/: CMakeLists.txt  ExatnMPSVisitorTester.cpp  ExatnVisitorInternalTester.cpp
tnqvm/visitors/itensor/: CMakeLists.txt  ITensorActivator.cpp
tnqvm/visitors/itensor/mps/: ITensorMPSVisitor.cpp  ITensorMPSVisitor.hpp
tnqvm/visitors/itensor/mps/tests/: CMakeLists.txt  ITensorMPSVisitorTester.cpp
tnqvm/visitors/itensor/tpls/itensor/: config.h  index.cc  real.h
tpls/: CMakeLists.txt
tpls/hyper_array/: LICENSE  README.md  hyper_array.hpp
(+124 files in other folders)
