include_directories(${XACC_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR})

add_executable(sycamore_circ_contract_flops sycamore_circ_contract_flops.cpp)
target_link_libraries(sycamore_circ_contract_flops PRIVATE xacc::xacc tnqvm)
target_compile_definitions(sycamore_circ_contract_flops PRIVATE RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/resources")

add_executable(sycamore_circ_mps sycamore_circ_mps.cpp)
target_link_libraries(sycamore_circ_mps PRIVATE xacc::xacc tnqvm)
target_compile_definitions(sycamore_circ_mps PRIVATE RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/resources")

add_executable(sycamore_circ_amplitude sycamore_circ_amplitude.cpp)
target_link_libraries(sycamore_circ_amplitude PRIVATE xacc::xacc tnqvm)
target_compile_definitions(sycamore_circ_amplitude PRIVATE RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/resources")

add_executable(sycamore_circ_validate_contraction sycamore_circ_validate_contraction.cpp)
target_link_libraries(sycamore_circ_validate_contraction PRIVATE xacc::xacc tnqvm)
target_compile_definitions(sycamore_circ_validate_contraction PRIVATE RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/resources")

add_executable(sycamore_circ_amplitude_compare sycamore_circ_amplitude_compare.cpp)
target_link_libraries(sycamore_circ_amplitude_compare PRIVATE xacc::xacc tnqvm)
target_compile_definitions(sycamore_circ_amplitude_compare PRIVATE RESOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/resources")